--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,6 +53,7 @@ a {
 #self-portrait {
   display: block;
   width: 250px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50%;
