--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,13 @@
 /* Elements adapted from https://piccalil.li/blog/a-more-modern-css-reset/ */
 
 @custom-selector :--heading h1, h2, h3, h4, h5, h6;
+
 @custom-media --narrow-window (width <= 991.98px);
 @custom-media --normal-window (width >= 992px);
 
 :root {
-    --main-bg-color: #f8f8f8;
-    --accent-color: #783d86;
+  --main-bg-color: #f8f8f8;
+  --accent-color: #783d86;
 }
 
 /* Box sizing rules */
@@ -113,12 +114,7 @@ label {
 /* Remove ugly underlines from links */
 a {
   text-decoration: none;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-  color: currentcolor;
+  color: var(--accent-color);
 }
 
 /* Make images easier to work with */
@@ -240,11 +236,12 @@ h3 {
   &:hover,
   &:focus,
   &:active {
-    transform: translateX(8px);
+      transform: translateX(8px);
+      color: var(--accent-color); 
   }
 
   display: table-row;
-
+  
   a {
     color: currentcolor;
   }
@@ -294,12 +291,32 @@ strong {
   font-weight: bold;
 }
 
-a {
-  color: currentcolor;
-
-  &:hover,
-  &:focus,
-  &:active {
-    color: var(--accent-color);
+.blog-post {
+  h1 {
+    font-size: 3rem;
   }
+  
+  h2 {
+    font-size: 2rem;
+  }
+}
+
+pre {
+     width: auto;
+    max-height: 600px;
+    overflow: auto;
+        background-color: #282c34;
+    border-radius: 10px;
+    border: 1px solid;
+    border-color: #111;
+    scrollbar-color: #ccc transparent;
+    margin: 20px 40px;
+    padding: 5px 20px;
+    word-wrap: normal;
+    code {
+	font-family: "IBM Plex Mono", monospace;
+	    text-indent: 0;
+    color: #FFF;
+    white-space: inherit;
+    }
 }
