--- a/src/style.css
+++ b/src/style.css
@@ -302,56 +302,53 @@ pre {
   width: auto;
   max-height: 600px;
   overflow: auto;
-        color: #e9e9f4;
-      background: #282936;
+  color: #e9e9f4;
+  background: #282936;
   border-radius: 10px;
   border: 1px solid;
   border-color: #111;
   scrollbar-color: #ccc transparent;
   margin: 20px 40px;
   padding: 5px 20px;
-  word-wrap: normal;
+  overflow-wrap: normal;
+
   code {
     font-family: "IBM Plex Mono", monospace;
     text-indent: 0;
     white-space: inherit;
-    /*!
-  Theme: Dracula
+
+    /*! Theme: Dracula
   Author: Mike Barkmin (http://github.com/mikebarkmin) based on Dracula Theme (http://github.com/dracula)
   License: ~ MIT (or more permissive) [via base16-schemes-source]
   Maintainer: @highlightjs/core-team
-  Version: 2021.09.0
-*/
-    .hljs {
-
-    }
+  Version: 2021.09.0 */
     .hljs::selection,
     .hljs ::selection {
       background-color: #4d4f68;
       color: #e9e9f4;
     }
-    /* purposely do not highlight these things */
-    .hljs-formula,
-    .hljs-params,
-    .hljs-property {
-    }
+
     /* base03 - #626483 -  Comments, Invisibles, Line Highlighting */
     .hljs-comment {
       color: #626483;
     }
+
     /* base04 - #62d6e8 -  Dark Foreground (Used for status bars) */
     .hljs-tag {
       color: #62d6e8;
     }
+
     /* base05 - #e9e9f4 -  Default Foreground, Caret, Delimiters, Operators */
     .hljs-subst,
     .hljs-punctuation,
     .hljs-operator {
       color: #e9e9f4;
     }
+
     .hljs-operator {
       opacity: 0.7;
     }
+
     /* base08 - Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted */
     .hljs-bullet,
     .hljs-variable,
@@ -361,6 +358,7 @@ pre {
     .hljs-deletion {
       color: #ea51b2;
     }
+
     /* base09 - Integers, Boolean, Constants, XML Attributes, Markup Link Url */
     .hljs-symbol,
     .hljs-number,
@@ -370,16 +368,19 @@ pre {
     .hljs-literal {
       color: #b45bcf;
     }
+
     /* base0A - Classes, Markup Bold, Search Text Background */
     .hljs-title,
     .hljs-class .hljs-title,
     .hljs-title.class_ {
       color: #00f769;
     }
+
     .hljs-strong {
       font-weight: bold;
       color: #00f769;
     }
+
     /* base0B - Strings, Inherited Class, Markup Code, Diff Inserted */
     .hljs-code,
     .hljs-addition,
@@ -387,8 +388,8 @@ pre {
     .hljs-string {
       color: #ebff87;
     }
+
     /* base0C - Support, Regular Expressions, Escape Characters, Markup Quotes */
-    /* guessing */
     .hljs-built_in,
     .hljs-doctag,
     .hljs-quote,
@@ -396,6 +397,7 @@ pre {
     .hljs-regexp {
       color: #a1efe4;
     }
+
     /* base0D - Functions, Methods, Attribute IDs, Headings */
     .hljs-function .hljs-title,
     .hljs-attribute,
@@ -404,35 +406,46 @@ pre {
     .hljs-section {
       color: #62d6e8;
     }
+
     /* base0E - Keywords, Storage, Selector, Markup Italic, Diff Changed */
-    /* .hljs-selector-id, */
-    /* .hljs-selector-class, */
-    /* .hljs-selector-attr, */
-    /* .hljs-selector-pseudo, */
+    .hljs-selector-id,
+    .hljs-selector-class,
+    .hljs-selector-attr,
+    .hljs-selector-pseudo,
     .hljs-type,
     .hljs-template-tag,
     .diff .hljs-meta,
     .hljs-keyword {
       color: #b45bcf;
     }
+
     .hljs-emphasis {
       color: #b45bcf;
       font-style: italic;
     }
-    /* base0F - Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */
-    /*
-  prevent top level .keyword and .string scopes
-  from leaking into meta by accident
-*/
+
+    /* base0F - Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> 
+    prevent top level .keyword and .string scopes from leaking into meta by accident */
     .hljs-meta,
     .hljs-meta .hljs-keyword,
     .hljs-meta .hljs-string {
       color: #00f769;
     }
+
     /* for v10 compatible themes */
     .hljs-meta .hljs-keyword,
     .hljs-meta-keyword {
       font-weight: bold;
     }
   }
+}
+
+figcaption {
+  font-size: 0.75rem;
+  text-align: center;
+  font-style: italic;
+}
+
+math {
+  font-size: 1.5rem;
 }
